--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <ul class="about-list list">
             <li class="li-width">
               <div class="work-div">
-                <svg class="work-icon width="65" height="70"" >
+                <svg class="work-icon" width="70" >
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                   </svg>
               </div>
@@ -75,7 +75,7 @@
             </li>
             <li class="li-width">
               <div class="work-div">
-                <svg class="work-icon width="66" height="70"">
+                <svg class="work-icon" width="70">
                   <use href="./images/symbol-defs.svg#icon-clock-1"></use>
                   </svg>
               </div>
@@ -87,7 +87,7 @@
             </li>
             <li class="li-width">
               <div class="work-div">
-                <svg class="work-icon width="70" height="70"">
+                <svg class="work-icon" width="70">
                   <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                   </svg>
               </div>
@@ -98,7 +98,7 @@
             </li>
             <li class="li-width">
               <div class="work-div">
-                <svg class="work-icon width="70" height="70"">
+                <svg class="work-icon " width="70">
                   <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
                   </svg>
               </div>
